css fixes and navbar collapse final

--- a/gulp/res/css/themes/azul.css
+++ b/gulp/res/css/themes/azul.css
@@ -40,6 +40,7 @@
 	background:none!important;border:none!important
 }
 
+.expand-omitted,
 .postmenu {
   border: 1px solid var(--post-outline-color);
 }
