--- a/gulp/res/css/themes/clássico-azul.css
+++ b/gulp/res/css/themes/clássico-azul.css
@@ -35,6 +35,7 @@
 	border-width: 0 1px 1px 0;
 }
 
+.expand-omitted,
 .postmenu {
   border: 1px solid var(--post-outline-color);
 }
