--- a/gulp/res/css/themes/clássico.css
+++ b/gulp/res/css/themes/clássico.css
@@ -39,6 +39,7 @@ tr,tr:nth-child(2n+1) {
     background: #fff
 }
 
+.expand-omitted,
 .postmenu {
   border: 1px solid var(--post-outline-color);
 }
