--- a/gulp/res/css/themes/ptchan.css
+++ b/gulp/res/css/themes/ptchan.css
@@ -250,7 +250,7 @@ b {
   }
   .expand-omitted,
   .postmenu {
-    border:1px solid var(--font-color)
+    border:1px solid var(--post-outline-color)
   }
   .catalog-tile,
   .post-container {
